# srmfpa

./: .clang-tidy  .gitmodules  CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yaml
fpa-specr-berkeley-softfloat/: Cargo.toml
fpa-specr-berkeley-softfloat/src/c/: f128.c  f16.c  f64.c
src/: impl.rs  internal.rs  lib.rs
src/c/: f128-a.c  f128-m.c  f128.c  f16-a.c  f16-m.c  f16.c  f32.c  f64.c  fenv_access.h  rounding_mode.c  unlikely.h
src/impl/: builtin.rs  f128.rs  f16.rs  f32.rs  f64.rs  softfloat.rs
src/impl/builtin/: f128.rs  f16.rs  f32.rs  f64.rs
src/impl/softfloat/: f128.rs  f16.rs  f32.rs  f64.rs  rounding_mode.rs
srmfpa-berkeley-softfloat-3/: Cargo.toml  build.rs
srmfpa-berkeley-softfloat-3/src/: lib.rs
srmfpa-berkeley-softfloat-3/src/c/: f32.c
srmfpa-berkeley-softfloat-3/src/c/platform/opts-gnu/: platform.h
