[package]
name = "fpa-specr"
version = "0.1.0"
edition = "2021"
rust-version = "1.64"  # by std::ffi
authors = ["Kentaro Tatsumi <paqira.2019@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/paqira/fpa-specr"
description = "Four floating-point arithmetic operations (including fused multiply-add) and square root in specified rounding mode"
keywords = ["floating-point", "rounding-mode"]
readme = "README.md"
exclude = [".*"]
categories = ["mathematics", "science"]

[dependencies]
fpa-specr-berkeley-softfloat = { path = "fpa-specr-berkeley-softfloat", version = "*", optional = true }

[build-dependencies]
cc = { version = "1" }

[features]
f16 = []
f128 = []
softfloat = ["f16-softfloat", "f32-softfloat", "f64-softfloat", "f128-softfloat"]
f16-softfloat = ["dep:fpa-specr-berkeley-softfloat"]
f32-softfloat = ["dep:fpa-specr-berkeley-softfloat"]
f64-softfloat = ["dep:fpa-specr-berkeley-softfloat"]
f128-softfloat = ["dep:fpa-specr-berkeley-softfloat"]

[workspace]
members = [
    "fpa-specr-berkeley-softfloat",
]
