[package]
name = "srmfpa"
version = "0.1.1"
edition = "2021"
rust-version = "1.64"  # by std::ffi
authors = ["Kentaro Tatsumi <paqira.2019@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/paqira/srmfpa"
description = "Floating-point's four arithmetic operations (including fused multiply-add) and square root with strict rounding mode"
keywords = ["floating-point", "rounding-mode", "correct-rounding"]
readme = "README.md"
exclude = [".*"]
categories = ["mathematics", "science"]

[dependencies]
srmfpa-berkeley-softfloat-3 = { path = "srmfpa-berkeley-softfloat-3", version = "=0.1.0", optional = true }

[build-dependencies]
cc = { version = "1" }

[features]
f16 = []
f128 = []
softfloat = ["f32_softfloat", "f64_softfloat"]
f16_softfloat = ["dep:srmfpa-berkeley-softfloat-3"]
f32_softfloat = ["dep:srmfpa-berkeley-softfloat-3"]
f64_softfloat = ["dep:srmfpa-berkeley-softfloat-3"]
f128_softfloat = ["dep:srmfpa-berkeley-softfloat-3"]

[workspace]
members = [
    "srmfpa-berkeley-softfloat-3",
]

[package.metadata.docs.rs]
features = ["f16_softfloat", "f128_softfloat"]
rustdoc-args = ["--cfg", "docsrs"]
