[package]
name = "fpa-specr-berkeley-softfloat"
version = "0.1.0"
edition = "2021"
rust-version = "1.63"  # by cc
authors = ["Kentaro Tatsumi <paqira.2019@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/paqira/fpa-specr"
description = "Wrapper of berkeley-softfloat for fpa-specr"

[build-dependencies]
cc = { version = "1" }
