[package]
name = "srmfpa-berkeley-softfloat-3"
version = "0.1.0"
edition = "2021"
rust-version = "1.63"  # by cc
authors = ["Kentaro Tatsumi <paqira.2019@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/paqira/srmfpa"
description = "Wrapper of berkeley-softfloat-3 for srmfpa"

[build-dependencies]
cc = { version = "1" }
